--- a/k8s/uat/deployment.yaml
+++ b/k8s/uat/deployment.yaml
@@ -2,25 +2,25 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: uat
-  name: kopa-react-client
+  name: covid-react-client
   labels:
-    name: kopa-react-client
-    app: kopa-react-client
+    name: covid-react-client
+    app: covid-react-client
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: kopa-react-client
+      app: covid-react-client
   template:
     metadata:
-      name: kopa-react-client
+      name: covid-react-client
       labels:
-        name: kopa-react-client
-        app: kopa-react-client
+        name: covid-react-client
+        app: covid-react-client
     spec:
       containers:
-        - name: kopa-react-client
+        - name: covid-react-client
           imagePullPolicy: Always
-          image: silasonyango93/kopa-react-client:latest
+          image: silasonyango93/covid-react-client:latest
           ports:
             - containerPort: 80
