--- a/k8s/uat/ingress.yaml
+++ b/k8s/uat/ingress.yaml
@@ -2,16 +2,16 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   namespace: uat
-  name: kopa-react-client
+  name: covid-react-client
   annotations:
     kubernetes.io/ingress.class: nginx
 #    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
 spec:
   rules:
-    - host: client.kopa.kopa.xyz
+    - host: botportal.kopa.kopa.xyz
       http:
         paths:
           - path: /
             backend:
-              serviceName: kopa-react-client
+              serviceName: covid-react-client
               servicePort: 80
