--- a/k8s/uat/services.yaml
+++ b/k8s/uat/services.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kopa-react-client
+  name: covid-react-client
   namespace: uat
   labels:
-    app: kopa-react-client
-    name: kopa-react-client
+    app: covid-react-client
+    name: covid-react-client
 spec:
   type: ClusterIP
   ports:
@@ -13,5 +13,5 @@ spec:
       name: http
       targetPort: 80
   selector:
-    app: kopa-react-client
-    name: kopa-react-client
+    app: covid-react-client
+    name: covid-react-client
